ds uml, ds component
